feat(engine): Implement v11.2 "Manual Bypass" for Ultimate Stability
This commit introduces a complete architectural overhaul of the neural synthesis engine to resolve persistent `AttributeError: 'tuple' object has no attribute 'shape'` bugs originating from incompatibilities between `diffusers` and `transformers` libraries.

The new engine (v11.2) shifts from an automatic pipeline to a **Manual Bypass** strategy, providing absolute control and stability.

Key Changes:
- **Manual Embedding Injection:** The `sd_generator.py` now calculates CLIP image embeddings manually and injects them as pre-processed tensors (`ip_adapter_image_embeds`). This completely bypasses the faulty internal `encode_image` method in `diffusers`, which was the root cause of the tuple/shape errors.

- **Dual Control System:** The engine retains the powerful combination of **ControlNet Depth** for volumetric structure and **IP-Adapter** for character identity transfer, now operating in a stable, manually controlled environment.

- **VRAM Optimization (Single Load):** The `worker.py` has been refactored to prevent the double-loading of models into VRAM. The engine now loads only once within the forked worker process, significantly improving memory efficiency on 6GB hardware.

- **UI & Telemetry:**
  - Implemented a "Flight Data Recorder" in the custom UI to log all generation parameters and performance metrics for advanced debugging.
  - Restored and enhanced all previous UI features, including tooltips and hardware stress warnings.
  - The UI has been upgraded to a premium "Capsule Corp" theme with custom form elements and aura animations.

This commit marks the transition to a production-ready, stable, and highly optimized Z-Realism engine, capable of transforming the entire Dragon Ball Super roster into cinematic live-action on consumer-grade hardware.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 # path: z_realism_ai/requirements.txt
-# description: Project dependencies.
-#              UPDATED: Added opencv-python-headless for Canny edge detection
-#              required by the updated SDXL Adapter logic.
+# description: Project dependencies updated for IP-Adapter support.
 # author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 
 fastapi==0.109.0
@@ -18,12 +16,13 @@ transformers==4.46.1
 accelerate==1.1.0
 scipy==1.12.0
 huggingface-hub==0.26.2
+safetensors==0.4.5
 
-# Structural Control Tools
+# Identity & Structural Tools
 insightface==0.7.3
-onnxruntime==1.17.3
-# CRITICAL: Headless OpenCV is needed for Docker environments (avoids X11 errors)
-opencv-python-headless==4.9.0.80 
+onnxruntime-gpu==1.17.1
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
 
 # Async Queue
 celery==5.3.6
