--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 # path: z_realism_ai/docker-compose.yml
-# description: Base orchestration configuration for the Z-Realism AI ecosystem.
-#              Designed for hardware-agnostic execution by removing mandatory 
-#              driver reservations. GPU acceleration is injected via overrides.
+# description: Orchestration v9.0 - Stability & Silenced Warnings.
+#              Added C_FORCE_ROOT to silence Celery security warnings.
 # author: Enrique González Gutiérrez <enrique.gonzalez.gutierrez@gmail.com>
 
 services:
@@ -15,6 +14,31 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  # --- Custom Web Interface (Nginx) ---
+  z-realism-ui:
+    image: nginx:alpine
+    container_name: z_realism_custom_ui
+    ports:
+      - "80:80"
+    volumes:
+      - ./src/presentation-custom:/usr/share/nginx/html
+    depends_on:
+      - z-realism-api
+
+  # --- Expert Dashboard (Streamlit) ---
+  z-realism-dashboard:
+    build: .
+    container_name: z_realism_dashboard
+    command: streamlit run src/presentation/dashboard.py --server.port=8501 --server.address=0.0.0.0
+    ports:
+      - "8501:8501"
+    volumes:
+      - ./src:/app/src
+    environment:
+      - API_URL=http://z-realism-api:8000
+    depends_on:
+      - z-realism-api
 
   # --- FastAPI Backend ---
   z-realism-api:
@@ -39,7 +63,7 @@ services:
   # --- AI Inference Worker (Celery) ---
   z-realism-worker:
     build: .
-    # Optimization: concurrency=1 to prevent VRAM/RAM contention in DL tasks
+    container_name: z_realism_worker
     command: celery -A src.infrastructure.worker worker --loglevel=info --concurrency=1
     volumes:
       - ./src:/app/src
@@ -49,25 +73,12 @@ services:
       - CELERY_BROKER_URL=redis://z-realism-broker:6379/0
       - CELERY_RESULT_BACKEND=redis://z-realism-broker:6379/0
       - OFFLINE_MODE=false
+      # SILENCE WARNING: Tells Celery to run as root without nagging.
+      - C_FORCE_ROOT=true
     depends_on:
       z-realism-broker:
         condition: service_healthy
 
-  # --- Streamlit Research Dashboard ---
-  z-realism-dashboard:
-    build: .
-    container_name: z_realism_dashboard
-    command: streamlit run src/presentation/dashboard.py --server.port=8501 --server.address=0.0.0.0
-    ports:
-      - "8501:8501"
-    volumes:
-      - ./src:/app/src
-    environment:
-      - API_URL=http://z-realism-api:8000
-    depends_on:
-      - z-realism-api
-
 volumes:
-  # Persistent storage for Hugging Face models (approx 10GB+ for SDXL/ControlNet)
   hf_cache:
     driver: local
