Add detailed character configurations for Dragon Ball characters
- Added Broly, Goku, Beerus, and Bulma entries with tailored prompts
- Set realistic, cinematic, and human-proportioned base prompts
- Defined character-specific negative prompts to avoid cartoonish or low-quality artifacts
- Configured ControlNet weights (depth & openpose) for each character
- Adjusted denoising strength per character for optimal fidelity
- Ensures CLIP token limits are respected to prevent truncation errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
   z-realism-worker:
     build: .
     container_name: z_realism_worker
-    command: celery -A src.infrastructure.worker worker --loglevel=info --concurrency=1
+    command: celery -A src.infrastructure.worker worker --loglevel=info --pool=solo
     volumes:
       - ./src:/app/src
       - hf_cache:/app/model_cache
